plugins/star-rating/frontend/public/stylesheets/main.css
.routename-star .zoom {
    display: none;
}
.routename-star #dashboard-graph-time {
    font-family: Oswald;
    font-size: 14px;
    margin: 0 30px;
}
.routename-star #dashboard-graph-cumulative {
    font-family: Oswald;
    font-size: 14px;
    margin: 0 30px;
}
.routename-star .left-m4 {
     left: -4px;
}
.routename-star .left-m8 {
     left: -8px;
}
.routename-star .tooltip-text {
     visibility: hidden;
     position: absolute;
     top: -25px;
     left: -6px;
     font-size: 13px;
     width: 60px;
     background-color: black;
     padding: 3px 1px;
     border-radius: 4px;
     color: white;
}

.routename-star .tooltip-wrapper {
     position: relative;
     text-align: center;
}

.mycolorpicker button{
    float:left;
     padding:0;
     border-radius:0;
     width: 25px;
     height:25px;
     background:none;
     margin-left:-27px;

}

.routename-star .left-m8 {
    left: -8px;
}

.routename-star .tooltip-text {
    visibility: hidden;
    position: absolute;
    top: -25px;
    left: -6px;
    font-size: 13px;
    width: 60px;
    background-color: black;
    padding: 3px 1px;
    border-radius: 4px;
    color: white;
}

.routename-star .tooltip-wrapper {
    position: relative;
    text-align: center;
}

.routename-star .mycolorpicker button {
    float: left;
    padding: 0;
    border-radius: 0;
    width: 25px;
    height: 25px;
    background: none;
    margin-left: -27px;
}

.routename-star .feedback-fields {
    display: none;
}

.routename-star .mycolorpicker button {
    background: transparent !important;
    border: none !important;
    border-radius: 2px !important;
}

.routename-star .mycolorpicker .ui-button span {
    display: none !important;
}

.routename-star .mycolorpicker button:hover, .mycolorpicker button:active {
    background-image: none;
    border: none;
}

.routename-star .mycolorpicker button:focus {
    outline: none;
}

.mleft-s > #feedback-sticker-svg, .mright-s > #feedback-sticker-svg, .bright-s > #feedback-sticker-svg, .bleft-s > #feedback-sticker-svg {
    height: 13px;
    width: 14px;
}
.mleft-m > #feedback-sticker-svg, .mright-m > #feedback-sticker-svg, .bright-m > #feedback-sticker-svg, .bleft-m > #feedback-sticker-svg {
    height: 15px;
    width: 18px;
}
.mleft-l > #feedback-sticker-svg, .mright-l > #feedback-sticker-svg, .bright-l > #feedback-sticker-svg, .bleft-l > #feedback-sticker-svg {
    height: 18px;
    width: 20px;
}

.routename-star .feedback-widget-target-page-item {
    margin-bottom: 3px;
    font-size: 11px;
}

.routename-star .pickpanel {
    width: 25px;
    height: 25px;
    float: left;
    border-radius: 2px 0 0 2px;
    border: 1px solid #D0D0D0;
    margin-right: -2px;
}

.routename-star .mycolorpicker input[type="text"] {
    width: 247px;
    height: 15px;
    border-radius: 0px 2px 2px 0px
}

.ui-colorpicker {
    background-color: #fff;
    padding: 16px;
    box-shadow: 0 3px 7px rgba(0, 0, 0, .08);
    border: 1px solid #D0D0D0;
    border-radius: 2px;
}

.routename-star #first-device-text {
    margin-top: 8px;
}

.routename-star .feedback-hide-sticker-description {
    color: #636363;
    font-size: 11px;
}

.routename-star .selectize-control.multi .selectize-input > div {
    padding: 6px 6px !important;
    line-height: 8px !important;
}

.routename-star .feedback-big-numbers-v2 .big-numbers .select {
    font-size: 11px !important;
}

.routename-star #page-select-wrapper > div > div.selectize-input {
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
    height: 31px !important;
    padding: 6px;
    outline: none !important;
    font-size: 12px;
    font-family: 'Ubuntu' !important;
    border-radius: 2px !important;
    border: 1px solid #DBDBDB !important;
    float: left;
    outline: none;
    line-height: 5px !important;
    margin-top: 10px !important;
}

.ui-colorpicker-buttonset .ui-button .ui-button-text, .ui-button-text-only .ui-button-text {
    padding: 0;
    margin: 0;
    line-height: 1.0;
    font-weight: normal !important;
}

.routename-star #tableTwo_wrapper > div.sticky-header > table > thead > tr > th > span:nth-child(1) {
    top: 3px;
    position: relative;
}

.ui-widget .ui-colorpicker-hex-alpha, .ui-widget .ui-colorpicker-hex-input, .ui-widget .ui-colorpicker-number {
    border-radius: 2px;
    margin: 0 !important;
    font: 14px Ubuntu, Helvetica, sans-serif;
    font-family: Ubuntu, Helvetica, sans-serif;
    font-size: 14px;
    line-height: normal;
    line-height: normal;
    line-height: 111%;
    padding: 5px;
    border: 1px solid #d0d0d0;
    text-align: center;
}

.ui-colorpicker-rgb div {
    float: left;
    width: 46px;
    padding-left: 11px;
}

.ui-colorpicker-hex p, .ui-colorpicker-rgb div p {
    text-align: center;
    margin: 0;
    padding: 7px 0 0 0;
    line-height: 1;
    font-size: 12px;
    color: #959595;
    font-weight: 700;
    text-transform: uppercase;
}

.ui-colorpicker-a .sliderbg {
    height: 256px;
    width: 20px;
    border-radius: 2px;
    border: 1px solid #d0d0d0;
    background-image: url("../images/star-rating/bar-alpha.png");
}

.ui-colorpicker-a .sliderbg .rangeslider {
    background-image: none;
    background-color: transparent;
    height: 238px;
    margin-top: 10px;
    width: 20px;
    border: none;
}

.ui-colorpicker-a .rangeslider .ui-slider-handle, .ui-colorpicker-a .rangeslider .ui-slider-handle:hover {
    border: none;
    width: 17px;
    height: 20px;
    background-color: transparent;
    background-image: url("../images/star-rating/bar-pointer.png");
    background-position: 50% 50%;
    background-repeat: no-repeat;
    padding: 0 5px;
    outline: 0 !important;
    margin: -10px 0 !important;
}

.ui-colorpicker-rgb input {
    text-align: center;
    width: 35px;
}

.ui-dialog-buttonset {
    float: right;
    margin-top: 10px;
}
/* ... */

